json-glib/tests/gvariant.c
@@ -12,7 +12,7 @@ typedef struct
 
 /* each entry in this list spawns to a GVariant-to-JSON and
    JSON-to-GVariant test */
-const TestCase test_cases[] =
+const TestCase two_way_test_cases[] =
   {
     /* boolean */
     { "/boolean", "(b)", "(true,)", "[true]" },
@@ -145,6 +145,18 @@ const TestCase test_cases[] =
       "[{\"true\":1,\"false\":0},[\"do\",null,\"did\"],[],null,{\"10000\":[\"yes\",\"august\"],\"0\":null}]" },
   };
 
+const TestCase json_to_gvariant_test_cases[] =
+  {
+    { "/string-to-boolean", "(b)", "(true,)", "[\"true\"]" },
+    { "/string-to-byte", "(y)", "(byte 0xff,)", "[\"255\"]" },
+    { "/string-to-int16", "(n)", "(int16 -12345,)", "[\"-12345\"]" },
+    { "/string-to-uint16", "(q)", "(uint16 40001,)", "[\"40001\"]" },
+    { "/string-to-int32", "(i)", "(-7654321,)", "[\"-7654321\"]" },
+    { "/string-to-int64", "(x)", "(int64 -666999666999,)", "[\"-666999666999\"]" },
+    { "/string-to-uint64", "(t)", "(uint64 1999999999999999,)", "[\"1999999999999999\"]" },
+    { "/string-to-double", "(d)", "(1.23,)", "[\"1.23\"]" },
+  };
+
 static void
 test_gvariant_to_json (gconstpointer test_data)
 {
@@ -207,23 +219,34 @@ main (gint argc, gchar *argv[])
   g_test_init (&argc, &argv, NULL);
 
   /* GVariant to JSON */
-  for (i = 0; i < sizeof (test_cases) / sizeof (TestCase); i++)
+  for (i = 0; i < sizeof (two_way_test_cases) / sizeof (TestCase); i++)
     {
-      test_case = test_cases[i];
+      test_case = two_way_test_cases[i];
       test_name = g_strdup_printf ("/gvariant/to-json/%s", test_case.test_name);
 
-      g_test_add_data_func (test_name, &test_cases[i], test_gvariant_to_json);
+      g_test_add_data_func (test_name, &two_way_test_cases[i], test_gvariant_to_json);
 
       g_free (test_name);
     }
 
   /* JSON to GVariant */
-  for (i = 0; i < sizeof (test_cases) / sizeof (TestCase); i++)
+  for (i = 0; i < sizeof (two_way_test_cases) / sizeof (TestCase); i++)
     {
-      test_case = test_cases[i];
+      test_case = two_way_test_cases[i];
       test_name = g_strdup_printf ("/gvariant/from-json/%s", test_case.test_name);
 
-      g_test_add_data_func (test_name, &test_cases[i], test_json_to_gvariant);
+      g_test_add_data_func (test_name, &two_way_test_cases[i], test_json_to_gvariant);
+
+      g_free (test_name);
+    }
+
+  /* JSON to GVariant one way tests */
+  for (i = 0; i < sizeof (json_to_gvariant_test_cases) / sizeof (TestCase); i++)
+    {
+      test_case = json_to_gvariant_test_cases[i];
+      test_name = g_strdup_printf ("/gvariant/from-json/%s", test_case.test_name);
+
+      g_test_add_data_func (test_name, &json_to_gvariant_test_cases[i], test_json_to_gvariant);
 
       g_free (test_name);
     }
